--- a/libs/math/package.json
+++ b/libs/math/package.json
@@ -17,24 +17,18 @@
     "@lndsld/fp": "workspace:*"
   },
   "devDependencies": {
+    "webpack": "~5.11.1",
+    "webpack-cli": "~4.3.1",
+    "@lndsld/webpack-config": "workspace:*",
+    "eslint": "~8.12.0",
+    "@lndsld/eslint-config": "workspace:*",
     "typescript": "~4.6.2",
     "jest": "~27.5.1",
     "ts-jest": "~27.1.3",
     "@types/jest": "~27.4.1",
-    "@rushstack/eslint-config": "~2.5.2",
-    "eslint": "~8.12.0",
-    "@babel/eslint-parser": "~7.17.0",
-    "eslint-plugin-unicorn": "~41.0.1",
     "npm-run-all": "~4.1.5",
     "jest-runner-tsd": "~3.0.0",
     "tsd-lite": "~0.5.3",
-    "webpack": "~5.11.1",
-    "webpack-cli": "~4.3.1",
-    "clean-webpack-plugin": "~3.0.0",
-    "babel-loader": "~8.2.4",
-    "@babel/preset-react": "~7.12.10",
-    "@babel/preset-env": "~7.12.11",
-    "@babel/preset-typescript": "~7.17.12",
     "@microsoft/api-extractor": "~7.24.1",
     "@microsoft/api-documenter": "~7.17.16"
   }
