--- a/libs/data-structures/package.json
+++ b/libs/data-structures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lndsld/data-structures",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/data-structures.js",
   "types": "lib/data-structures.d.ts",
@@ -14,27 +14,27 @@
     "test": "run-p test:impl test:types"
   },
   "dependencies": {
-    "object-hash": "~3.0.0",
-    "@lndsld/fp": "workspace:*"
+    "@lndsld/fp": "workspace:*",
+    "object-hash": "~3.0.0"
   },
   "devDependencies": {
-    "webpack": "~5.11.1",
-    "webpack-cli": "~4.3.1",
-    "@lndsld/webpack-config": "workspace:*",
-    "eslint": "~8.12.0",
     "@lndsld/eslint-config": "workspace:*",
-    "typescript": "~4.6.2",
-    "jest": "~27.5.1",
-    "ts-jest": "~27.1.3",
-    "@types/jest": "~27.4.1",
-    "plop": "~2.6.0",
-    "npm-run-all": "~4.1.5",
-    "jest-runner-tsd": "~3.0.0",
-    "tsd-lite": "~0.5.3",
+    "@lndsld/webpack-config": "workspace:*",
+    "@microsoft/api-extractor": "~7.24.1",
     "@tsd/typescript": "~4.6.3",
-    "@types/object-hash": "~2.2.1",
+    "@types/jest": "~27.4.1",
     "@types/node": "~13.11.1",
-    "@microsoft/api-extractor": "~7.24.1"
+    "@types/object-hash": "~2.2.1",
+    "eslint": "~8.12.0",
+    "jest": "~27.5.1",
+    "jest-runner-tsd": "~3.0.0",
+    "npm-run-all": "~4.1.5",
+    "plop": "~2.6.0",
+    "ts-jest": "~27.1.3",
+    "tsd-lite": "~0.5.3",
+    "typescript": "~4.6.2",
+    "webpack": "~5.11.1",
+    "webpack-cli": "~4.3.1"
   },
   "tsd": {
     "directory": "src"
