--- a/libs/math/package.json
+++ b/libs/math/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lndsld/math",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "lib/math.js",
   "types": "lib/math.d.ts",
@@ -17,19 +17,19 @@
     "@lndsld/fp": "workspace:*"
   },
   "devDependencies": {
-    "webpack": "~5.11.1",
-    "webpack-cli": "~4.3.1",
-    "@lndsld/webpack-config": "workspace:*",
-    "eslint": "~8.12.0",
     "@lndsld/eslint-config": "workspace:*",
-    "typescript": "~4.6.2",
-    "jest": "~27.5.1",
-    "ts-jest": "~27.1.3",
-    "@types/jest": "~27.4.1",
-    "npm-run-all": "~4.1.5",
-    "jest-runner-tsd": "~3.0.0",
-    "tsd-lite": "~0.5.3",
+    "@lndsld/webpack-config": "workspace:*",
+    "@microsoft/api-documenter": "~7.17.16",
     "@microsoft/api-extractor": "~7.24.1",
-    "@microsoft/api-documenter": "~7.17.16"
+    "@types/jest": "~27.4.1",
+    "eslint": "~8.12.0",
+    "jest": "~27.5.1",
+    "jest-runner-tsd": "~3.0.0",
+    "npm-run-all": "~4.1.5",
+    "ts-jest": "~27.1.3",
+    "tsd-lite": "~0.5.3",
+    "typescript": "~4.6.2",
+    "webpack": "~5.11.1",
+    "webpack-cli": "~4.3.1"
   }
 }
