--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -14,9 +14,11 @@
   },
   "devDependencies": {
     "webpack": "~5.11.1",
-    "webpack-cli": "~4.3.1"
+    "webpack-cli": "~4.3.1",
+    "@babel/core": "~7.18.5"
   },
   "peerDependencies": {
+    "typescript": "^4.0.0",
     "webpack": "^5.0.0",
     "webpack-cli": "^4.0.0"
   }
