--- a/libs/fp/package.json
+++ b/libs/fp/package.json
@@ -27,6 +27,7 @@
     "tsd-lite": "~0.5.3",
     "typescript": "~4.6.2",
     "webpack": "~5.11.1",
-    "webpack-cli": "~4.3.1"
+    "webpack-cli": "~4.3.1",
+    "@tsd/typescript": "~4.6.3"
   }
 }
