--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -2,20 +2,24 @@
   "name": "@lndsld/webpack-config",
   "version": "0.1.0",
   "description": "",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "build": ""
+    "build": "tsc"
   },
   "dependencies": {
-    "clean-webpack-plugin": "~3.0.0",
+    "@babel/core": "~7.18.5",
     "babel-loader": "~8.2.4",
     "@babel/preset-react": "~7.12.10",
     "@babel/preset-env": "~7.12.11",
-    "@babel/preset-typescript": "~7.17.12"
+    "@babel/preset-typescript": "~7.17.12",
+    "webpack-merge": "~5.8.0"
   },
   "devDependencies": {
-    "webpack": "~5.11.1",
+    "webpack": "~5.73.0",
     "webpack-cli": "~4.3.1",
-    "@babel/core": "~7.18.5"
+    "typescript": "~4.7.3",
+    "@types/node": "~13.11.1"
   },
   "peerDependencies": {
     "typescript": "^4.0.0",
