--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -13,12 +13,12 @@
     "@babel/preset-react": "~7.12.10",
     "@babel/preset-env": "~7.12.11",
     "@babel/preset-typescript": "~7.17.12",
-    "webpack-merge": "~5.8.0"
+    "@lndsld/config-builders": "workspace:*"
   },
   "devDependencies": {
     "webpack": "~5.73.0",
     "webpack-cli": "~4.3.1",
-    "typescript": "~4.7.3",
+    "typescript": "~4.7.4",
     "@types/node": "~13.11.1"
   },
   "peerDependencies": {
