--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -1,25 +1,28 @@
 {
   "name": "@lndsld/webpack-config",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
     "@babel/core": "~7.18.5",
-    "babel-loader": "~8.2.4",
-    "@babel/preset-react": "~7.12.10",
     "@babel/preset-env": "~7.12.11",
+    "@babel/preset-react": "~7.12.10",
     "@babel/preset-typescript": "~7.17.12",
-    "@lndsld/config-builders": "workspace:*"
+    "@lndsld/config-builders": "workspace:*",
+    "babel-loader": "~8.2.4"
   },
   "devDependencies": {
-    "webpack": "~5.73.0",
-    "webpack-cli": "~4.3.1",
+    "@types/node": "~13.11.1",
     "typescript": "~4.7.4",
-    "@types/node": "~13.11.1"
+    "webpack": "~5.73.0",
+    "webpack-cli": "~4.3.1"
   },
   "peerDependencies": {
     "typescript": "^4.0.0",
