--- a/libs/config-builders/package.json
+++ b/libs/config-builders/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@lndsld/config-builders",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Builder of configs for tools such as webpack",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "tsc && api-extractor run --local --diagnostics"
   },
@@ -12,11 +14,11 @@
     "webpack-merge": "~5.8.0"
   },
   "devDependencies": {
-    "webpack": "~5.73.0",
-    "typescript": "~4.7.4",
+    "@lndsld/eslint-config": "workspace:*",
     "@microsoft/api-extractor": "~7.24.1",
     "eslint": "~8.12.0",
-    "@lndsld/eslint-config": "workspace:*"
+    "typescript": "~4.7.4",
+    "webpack": "~5.73.0"
   },
   "peerDependencies": {
     "webpack": ">= 5"
