--- a/libs/fp/package.json
+++ b/libs/fp/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@lndsld/fp",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/fp.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build:impl": "webpack",
     "build:types": "tsc -p tsconfig.prod.json && api-extractor run --local --diagnostics",
@@ -18,6 +21,7 @@
     "@lndsld/webpack-config": "workspace:*",
     "@microsoft/api-documenter": "~7.17.16",
     "@microsoft/api-extractor": "~7.24.1",
+    "@tsd/typescript": "~4.6.3",
     "@types/jest": "~27.4.1",
     "eslint": "~8.12.0",
     "jest": "~27.5.1",
@@ -27,7 +31,6 @@
     "tsd-lite": "~0.5.3",
     "typescript": "~4.7.4",
     "webpack": "~5.73.0",
-    "webpack-cli": "~4.3.1",
-    "@tsd/typescript": "~4.6.3"
+    "webpack-cli": "~4.3.1"
   }
 }
