--- a/libs/react-hooks/package.json
+++ b/libs/react-hooks/package.json
@@ -2,29 +2,22 @@
   "name": "@lndsld/react-hooks",
   "version": "0.2.0",
   "description": "",
-  "main": "lib/index.js",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/esm/index.js",
   "types": "lib/react-hooks.d.ts",
   "scripts": {
-    "build:impl": "webpack",
-    "build:types": "tsc -p tsconfig.prod.json && api-extractor run --local --diagnostics",
-    "build": "run-s build:impl build:types"
+    "build": "heft build --clean"
   },
   "files": [
     "lib"
   ],
   "devDependencies": {
     "@lndsld/eslint-config": "workspace:*",
-    "@lndsld/webpack-config": "workspace:*",
-    "@microsoft/api-documenter": "~7.17.16",
-    "@microsoft/api-extractor": "~7.24.1",
+    "@lndsld/heft-library-rig": "workspace:*",
+    "@rushstack/heft": "~0.45.8",
     "@types/react": "~18.0.12",
-    "eslint": "~8.12.0",
     "eslint-plugin-react-hooks": "~4.6.0",
-    "npm-run-all": "~4.1.5",
-    "react": ">= 17",
-    "typescript": "~4.7.4",
-    "webpack": "~5.73.0",
-    "webpack-cli": "~4.3.1"
+    "react": ">= 17"
   },
   "peerDependencies": {
     "react": ">= 17"
