[fp] migration to heft-library-rig

--- a/libs/fp/tsconfig.json
+++ b/libs/fp/tsconfig.json
@@ -1,10 +1,9 @@
 {
+    "extends": "@lndsld/heft-library-rig/profiles/default/tsconfig.json",
     "compilerOptions": {
-        "lib": ["ESNext"],
-        "module": "UMD",
-        "moduleResolution": "Node",
-        "allowJs": false,
-        "strict": true,
+        "outDir": "lib/esm",
+        "declarationDir": "temp/types",
+        "types": ["heft-jest"]
     },
     "include": ["src"],
 }
