--- a/configs/heft-library-rig/profiles/default/config/jest.config.json
+++ b/configs/heft-library-rig/profiles/default/config/jest.config.json
@@ -1,4 +1,3 @@
 {
-    "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json",
-    "testEnvironment": "jest-environment-jsdom"
+    "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json"
 }
