--- a/libs/data-structures/package.json
+++ b/libs/data-structures/package.json
@@ -2,19 +2,15 @@
   "name": "@lndsld/data-structures",
   "version": "0.1.1",
   "description": "",
-  "main": "lib/data-structures.js",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/esm/index.js",
   "types": "lib/data-structures.d.ts",
-  "files": [
-    "lib"
-  ],
   "scripts": {
-    "build:impl": "webpack",
-    "build:types": "tsc -p tsconfig.prod.json && api-extractor run --local --diagnostics",
-    "build": "run-s build:impl build:types",
+    "build": "heft build --clean",
     "generate": "plop",
-    "test:impl": "jest",
+    "test:impl": "heft test --no-build",
     "test:types": "jest -c jest.config.types.js",
-    "test": "run-p test:impl test:types"
+    "test": "npm run test:impl"
   },
   "dependencies": {
     "@lndsld/fp": "workspace:*",
@@ -22,22 +18,17 @@
   },
   "devDependencies": {
     "@lndsld/eslint-config": "workspace:*",
-    "@lndsld/webpack-config": "workspace:*",
-    "@microsoft/api-extractor": "~7.24.1",
+    "@lndsld/heft-library-rig": "workspace:*",
+    "@rushstack/heft": "~0.45.8",
     "@tsd/typescript": "~4.6.3",
     "@types/jest": "~27.4.1",
+    "@types/heft-jest": "~1.0.3",
     "@types/node": "~13.11.1",
     "@types/object-hash": "~2.2.1",
-    "eslint": "~8.12.0",
     "jest": "~27.5.1",
     "jest-runner-tsd": "~3.0.0",
-    "npm-run-all": "~4.1.5",
     "plop": "~2.6.0",
-    "ts-jest": "~27.1.3",
-    "tsd-lite": "~0.5.3",
-    "typescript": "~4.7.4",
-    "webpack": "~5.73.0",
-    "webpack-cli": "~4.3.1"
+    "tsd-lite": "~0.5.3"
   },
   "tsd": {
     "directory": "src"
