--- a/libs/data-structures/tsconfig.json
+++ b/libs/data-structures/tsconfig.json
@@ -1,10 +1,11 @@
 {
+    "extends": "@lndsld/heft-library-rig/profiles/default/tsconfig.json",
     "compilerOptions": {
-        "lib": ["ESNext"],
-        "module": "UMD",
-        "moduleResolution": "Node",
-        "allowJs": false,
-        "strict": true,
+        "outDir": "lib/esm",
+        "declarationDir": "temp/types",
+        "types": ["heft-jest"],
+        "skipLibCheck": true
     },
     "include": ["src"],
+    "exclude": ["**/*.test-d.ts"]
 }
