--- a/libs/react-hooks/package.json
+++ b/libs/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lndsld/react-hooks",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "main": "lib/commonjs/index.js",
   "module": "lib/esm/index.js",
@@ -13,9 +13,9 @@
     "@lndsld/heft-library-rig": "workspace:*",
     "@rushstack/heft": "~0.45.8",
     "@types/react": "~18.0.12",
+    "eslint": "~8.12.0",
     "eslint-plugin-react-hooks": "~4.6.0",
-    "react": ">= 17",
-    "eslint": "~8.12.0"
+    "react": ">= 17"
   },
   "peerDependencies": {
     "react": ">= 17"
