[data-structures] Improved pipe compatibility

--- a/libs/data-structures/package.json
+++ b/libs/data-structures/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "heft build --clean",
     "generate": "plop",
-    "test:impl": "heft test --no-build",
+    "test:impl": "heft test",
     "test:types": "tsd",
     "test": "npm run test:impl && npm run test:types"
   },
@@ -24,7 +24,8 @@
     "@types/node": "~13.11.1",
     "@types/object-hash": "~2.2.1",
     "plop": "~2.6.0",
-    "tsd": "~0.22.0"
+    "tsd": "~0.22.0",
+    "eslint": "~8.12.0"
   },
   "tsd": {
     "directory": "src"
