--- a/libs/react-hooks/package.json
+++ b/libs/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lndsld/react-hooks",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "",
   "main": "lib/commonjs/index.js",
   "module": "lib/esm/index.js",
@@ -9,8 +9,8 @@
     "build": "heft build --clean"
   },
   "dependencies": {
-    "@lndsld/math": "workspace:*",
-    "@lndsld/fp": "workspace:*"
+    "@lndsld/fp": "workspace:*",
+    "@lndsld/math": "workspace:*"
   },
   "devDependencies": {
     "@lndsld/eslint-config": "workspace:*",
