--- a/configs/heft-library-rig/package.json
+++ b/configs/heft-library-rig/package.json
@@ -10,7 +10,7 @@
     "@rushstack/heft-jest-plugin":"~0.3.8",
     "eslint": "~8.12.0",
     "typescript": "~4.7.4",
-    "jest-environment-jsdom": "~28.1.1"
+    "jest-environment-jsdom": "^27"
   },
   "devDependencies": {
     "@rushstack/heft": "~0.45.8"
