--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lndsld/webpack-config",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -11,18 +11,19 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@babel/core": "~7.18.5",
-    "@babel/preset-env": "~7.12.11",
-    "@babel/preset-react": "~7.12.10",
-    "@babel/preset-typescript": "~7.17.12",
     "@lndsld/config-builders": "workspace:*",
-    "babel-loader": "~8.2.4"
+    "html-webpack-plugin": "~5.5.0",
+    "swc-loader": "~0.2.3",
+    "@swc/core": "~1.3.11",
+    "webpack-dev-server": "~4.11.1"
   },
   "devDependencies": {
     "@types/node": "~13.11.1",
     "typescript": "~4.7.4",
     "webpack": "~5.73.0",
-    "webpack-cli": "~4.3.1"
+    "webpack-cli": "~4.10.0",
+    "@lndsld/eslint-config": "workspace:*",
+    "eslint": "~8.12.0"
   },
   "peerDependencies": {
     "typescript": "^4.0.0",
