--- a/configs/webpack-config/tsconfig.json
+++ b/configs/webpack-config/tsconfig.json
@@ -6,7 +6,8 @@
         "module": "CommonJS",
         "target": "ES6",
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "types": ["node"]
     },
     "include": ["src"]
 }
