--- a/configs/webpack-config/package.json
+++ b/configs/webpack-config/package.json
@@ -15,7 +15,9 @@
     "html-webpack-plugin": "~5.5.0",
     "swc-loader": "~0.2.3",
     "@swc/core": "~1.3.11",
-    "webpack-dev-server": "~4.11.1"
+    "webpack-dev-server": "~4.11.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "~0.5.8",
+    "react-refresh": "~0.14.0"
   },
   "devDependencies": {
     "@types/node": "~13.11.1",
