--- a/libs/orc/package.json
+++ b/libs/orc/package.json
@@ -6,6 +6,11 @@
   },
   "main": "lib/commonjs/index.js",
   "module": "lib/esm/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NEWESTERS/lndsld.git",
+    "directory": "libs/orc"
+  },
   "types": "lib/orc.d.ts",
   "scripts": {
     "build": "heft build",
@@ -19,13 +24,13 @@
     "@lndsld/eslint-config": "workspace:*",
     "@lndsld/heft-library-rig": "workspace:*",
     "@rushstack/heft": "~0.45.8",
-    "@types/react": "~17.0.50",
     "@types/heft-jest": "~1.0.3",
-    "eslint": "~8.12.0",
     "@types/node": "~18.11.9",
+    "@types/react": "~17.0.50",
+    "@types/yargs": "17.0.13",
+    "eslint": "~8.12.0",
     "ts-node": "~10.9.1",
-    "typescript": "~4.7.4",
-    "@types/yargs": "17.0.13"
+    "typescript": "~4.7.4"
   },
   "engines": {
     "node": ">= 14.18.0"
